--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
         <i class="fa-solid fa-file"></i>
         <p>Plano de Manutenção</p>
       </a>
+      <a href="form-insatisfacao.html" class="card">
+        <i class="fa-solid fa-chart-column"></i>
+        <p>Insatisfação do Cliente</p>
+      </a>
       <a href="Gestores.html" class="card">
         <i class="fa-solid fa-chart-column"></i>
         <p>Dashboard</p>
@@ -332,3 +336,4 @@
 
 </body>
 </html>
+
