--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>Plano de Manutenção</p>
       </a>
       <a href="form-insatisfacao.html" class="card">
-        <i class="fa-solid fa-chart-column"></i>
+        <i class="fa-exclamation-circle"></i>
         <p>Insatisfação do Cliente</p>
       </a>
       <a href="Gestores.html" class="card">
@@ -336,4 +336,5 @@
 
 </body>
 </html>
+
 
