--- a/form-insatisfacao.html
+++ b/form-insatisfacao.html
@@ -1,45 +1,235 @@
-<h2>Formulário de Insatisfação</h2>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Formulário de Insatisfação</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-<form onsubmit="enviarChecklist(event, 'insatisfacoesClientes')">
-  <label>Data da Visita *</label>
-  <input type="date" name="dataVisita" id="dataVisita" required>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
 
-  <label>Filial *</label>
-  <select name="filial" id="filial" required>
-    <option value="">Selecione a filial</option>
-    <option value="Campos Novos">Campos Novos</option>
-    <option value="Rio do Sul">Rio do Sul</option>
-    <option value="Lages">Lages</option>
-  </select>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #001439;
+      color: white;
+    }
 
-  <label>Nome do Cliente *</label>
-  <input type="text" name="nomeCliente" required>
+    .container {
+      max-width: 600px;
+      margin: 40px auto;
+      background-color: #2c2f3f;
+      border-radius: 12px;
+      padding: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
 
-  <label>Telefone *</label>
-  <input type="tel" name="telefone" required>
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-  <label>Município *</label>
-  <select name="municipio" id="municipio" required>
-    <option value="">Selecione um município</option>
-  </select>
+    label {
+      display: block;
+      margin-bottom: 6px;
+      font-size: 14px;
+      font-weight: bold;
+    }
 
-  <label>Nome do Consultor *</label>
-  <select name="nomeConsultor" id="nomeConsultor" required>
-    <option value="">Selecione o consultor</option>
-  </select>
+    input, textarea, select {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: none;
+      border-radius: 8px;
+      font-size: 15px;
+      background-color: #f1f1f1;
+      color: #000;
+    }
 
-  <label>Departamento com Insatisfação *</label>
-  <select name="departamentoInsatisfacao" required>
-    <option value="">Selecione o departamento</option>
-    <option value="Peças">Peças</option>
-    <option value="Serviços">Serviços</option>
-    <option value="Vendas">Vendas</option>
-    <option value="Financeiro">Financeiro</option>
-    <option value="Outros">Outros</option>
-  </select>
+    input[type="date"],
+    select {
+      appearance: none;
+      -webkit-appearance: none;
+    }
 
-  <label>Descreva a Insatisfação</label>
-  <textarea name="observacoes" rows="4" placeholder="Detalhe aqui o que ocorreu..."></textarea>
+    textarea {
+      resize: vertical;
+    }
 
-  <button type="submit">Enviar</button>
-</form>
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #00bbf9;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #009ed1;
+    }
+
+    .voltar {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      color: white;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: bold;
+      margin: 20px 0;
+      transition: 0.3s;
+    }
+
+    .voltar:hover {
+      color: #00bbf9;
+      transform: translateX(-5px);
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        max-width: 360px;
+        padding: 20px;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <a href="index.html" class="voltar">
+      <i class="fas fa-arrow-left"></i> Voltar
+    </a>
+
+    <h2>Formulário de Insatisfação</h2>
+
+    <form onsubmit="enviarChecklist(event, 'insatisfacoesClientes')">
+      <label>Data da Visita *</label>
+      <input type="date" name="dataVisita" id="dataVisita" required>
+
+      <label>Filial *</label>
+      <select name="filial" id="filial" required>
+        <option value="">Selecione a filial</option>
+        <option value="Campos Novos">Campos Novos</option>
+        <option value="Rio do Sul">Rio do Sul</option>
+        <option value="Lages">Lages</option>
+      </select>
+
+      <label>Nome do Cliente *</label>
+      <input type="text" name="nomeCliente" required>
+
+      <label>Telefone *</label>
+      <input type="tel" name="telefone" required>
+
+      <label>Município *</label>
+      <select name="municipio" id="municipio" required>
+        <option value="">Selecione um município</option>
+      </select>
+
+      <label>Nome do Consultor *</label>
+      <select name="nomeConsultor" id="nomeConsultor" required>
+        <option value="">Selecione o consultor</option>
+      </select>
+
+      <label>Departamento com Insatisfação *</label>
+      <select name="departamentoInsatisfacao" required>
+        <option value="">Selecione o departamento</option>
+        <option value="Peças">Peças</option>
+        <option value="Serviços">Serviços</option>
+        <option value="Vendas">Vendas</option>
+        <option value="Financeiro">Financeiro</option>
+        <option value="Outros">Outros</option>
+      </select>
+
+      <label>Descreva a Insatisfação</label>
+      <textarea name="observacoes" rows="4" placeholder="Detalhe aqui o que ocorreu..."></textarea>
+
+      <button type="submit">Enviar</button>
+    </form>
+  </div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const hoje = new Date().toISOString().split('T')[0];
+      document.getElementById('dataVisita').value = hoje;
+
+      const municipiosPorFilial = {
+        "Campos Novos": [
+          "Campos Novos", "Abdon Batista", "Vargem", "Zortéa", "Brunópolis", "Monte Carlo", "Frei Rogério",
+          "Joaçaba", "Luzerna", "Herval d’Oeste", "Erval Velho",
+          "Concórdia", "Irani", "Lindóia do Sul", "Presidente Castello Branco", "Peritiba", "Ipira", "Piratuba",
+          "Capinzal", "Ouro", "Lacerdópolis",
+          "Caçador", "Calmon", "Matos Costa", "Lebon Régis", "Timbó Grande", "Rio das Antas", "Santa Cecília",
+          "Curitibanos", "São Cristóvão do Sul", "Ponte Alta do Norte",
+          "Videira", "Iomerê", "Tangará", "Pinheiro Preto", "Arroio Trinta", "Ibicaré", "Treze Tílias"
+        ],
+        "Rio do Sul": [
+          "Vitor Meireles", "José Boiteux", "Witmarsum",
+          "Presidente Getúlio", "Dona Emma", "Ibirama", "Presidente Nereu",
+          "Pouso Redondo", "Salete", "Taió", "Mirim Doce",
+          "Ituporanga", "Petrolândia", "Imbuia", "Atalanta",
+          "Aurora", "Laurentino", "Rio do Oeste", "Agronômica",
+          "Rio do Sul", "Lontras", "Agrolândia", "Trombudo Central"
+        ],
+        "Lages": [
+          "Correia Pinto", "Ponte Alta", "São José do Cerrito",
+          "Anita Garibaldi", "Campo Belo do Sul", "Capão Alto", "Cerro Negro",
+          "Bom Retiro", "Urubici", "Urupema", "Rio Rufino", "São Joaquim",
+          "Bocaina do Sul", "Otacílio Costa", "Palmeira", "Painel",
+          "Lages"
+        ]
+      };
+
+      const consultoresPorFilial = {
+        "Campos Novos": ["João Silva", "Maria Oliveira"],
+        "Rio do Sul": ["Carlos Souza", "Fernanda Lima"],
+        "Lages": ["Pedro Martins", "Ana Paula"]
+      };
+
+      const filialSelect = document.getElementById("filial");
+      const municipioSelect = document.getElementById("municipio");
+      const consultorSelect = document.getElementById("nomeConsultor");
+
+      municipioSelect.disabled = true;
+      consultorSelect.disabled = true;
+
+      filialSelect.addEventListener("change", () => {
+        const filial = filialSelect.value;
+
+        // Atualiza municípios
+        const municipios = municipiosPorFilial[filial] || [];
+        municipioSelect.disabled = !filial;
+        municipioSelect.innerHTML = '<option value="">Selecione um município</option>';
+        municipios.forEach((nome) => {
+          const option = document.createElement("option");
+          option.value = nome;
+          option.textContent = nome;
+          municipioSelect.appendChild(option);
+        });
+
+        // Atualiza consultores
+        const consultores = consultoresPorFilial[filial] || [];
+        consultorSelect.disabled = !filial;
+        consultorSelect.innerHTML = '<option value="">Selecione o consultor</option>';
+        consultores.forEach((nome) => {
+          const option = document.createElement("option");
+          option.value = nome;
+          option.textContent = nome;
+          consultorSelect.appendChild(option);
+        });
+      });
+    });
+  </script>
+
+  <!-- Firebase -->
+  <script type="module" src="firebase.js"></script>
+</body>
+</html>
