--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>Plano de Manutenção</p>
       </a>
       <a href="form-insatisfacao.html" class="card">
-        <i class="fa-ban"></i>
+        <i class="fa-solid fa-circle-exclamation"></i>
         <p>Insatisfação do Cliente</p>
       </a>
       <a href="Gestores.html" class="card">
@@ -336,6 +336,7 @@
 
 </body>
 </html>
+
 
 
 
