--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
         <i class="fa-solid fa-file"></i>
         <p>Plano de Manutenção</p>
       </a>
+      <a href="cards-promo.html" class="card">
+        <i class="fa-solid fa-file"></i>
+        <p>Promoções Ativas</p>
+      </a>
       <a href="form-insatisfacao.html" class="card">
         <i class="fa-solid fa-circle-exclamation"></i>
         <p>Insatisfação do Cliente</p>
@@ -336,6 +340,7 @@
 
 </body>
 </html>
+
 
 
 
