--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>Plano de Manutenção</p>
       </a>
       <a href="cards-promo.html" class="card">
-        <i class="fa-solid fa-file"></i>
+        <i class="fa-solid fa-tags"></i>
         <p>Promoções Ativas</p>
       </a>
       <a href="form-insatisfacao.html" class="card">
@@ -340,6 +340,7 @@
 
 </body>
 </html>
+
 
 
 
