--- a/index.html
+++ b/index.html
@@ -336,10 +336,36 @@
       }
     });
   }
+
+  <button id="instalarApp" style="display: none;">Instalar AgroDivel 360</button>
+  
+  let deferredPrompt;
+  const installBtn = document.getElementById('instalarApp');
+
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault(); // Bloqueia o comportamento automático
+    deferredPrompt = e;
+    installBtn.style.display = 'block';
+
+    installBtn.addEventListener('click', () => {
+      installBtn.style.display = 'none';
+      deferredPrompt.prompt();
+      deferredPrompt.userChoice.then((choiceResult) => {
+        if (choiceResult.outcome === 'accepted') {
+          console.log('App instalado com sucesso!');
+        } else {
+          console.log('Usuário recusou a instalação.');
+        }
+        deferredPrompt = null;
+      });
+    });
+  });
+  
 </script>
 
 </body>
 </html>
+
 
 
 
