--- a/form-PLM.html
+++ b/form-PLM.html
@@ -84,7 +84,7 @@
     button {
       width: 100%;
       padding: 12px;
-      background-color: #00bbf9;
+      background-color: #001439;
       color: white;
       border: none;
       border-radius: 8px;
@@ -95,7 +95,7 @@
     }
 
     button:hover {
-      background-color: #009ed1;
+      background-color: #033ca7;
     }
 
     .voltar {
@@ -198,7 +198,7 @@
       <label>Observações</label>
       <textarea name="observacoes" rows="4" placeholder="Descreva aqui..."></textarea>
 
-      <button type="submit">Enviar Checklist</button>
+      <button type="submit">Enviar</button>
     </form>
   </div>
 
@@ -317,3 +317,4 @@
   <script type="module" src="firebase.js"></script>
 </body>
 </html>
+
