--- a/form-consorcio.html
+++ b/form-consorcio.html
@@ -83,7 +83,7 @@
     button {
       width: 100%;
       padding: 12px;
-      background-color: #00bbf9;
+      background-color: #001439;
       color: white;
       border: none;
       border-radius: 8px;
@@ -94,7 +94,7 @@
     }
 
     button:hover {
-      background-color: #009ed1;
+      background-color: #033ca7;
     }
 
     .voltar {
@@ -189,7 +189,7 @@
       <label>Observações</label>
       <textarea name="observacoes" rows="4" placeholder="Descreva aqui..."></textarea>
 
-      <button type="submit">Enviar Checklist</button>
+      <button type="submit">Enviar</button>
     </form>
   </div>
 
@@ -305,3 +305,4 @@
   <script type="module" src="firebase.js"></script>
 </body>
 </html>
+
