--- a/form-insatisfacao.html
+++ b/form-insatisfacao.html
@@ -63,7 +63,7 @@
     button {
       width: 100%;
       padding: 12px;
-      background-color: #00bbf9;
+      background-color: #001439;
       color: white;
       border: none;
       border-radius: 8px;
@@ -74,7 +74,7 @@
     }
 
     button:hover {
-      background-color: #009ed1;
+      background-color: #033ca7;
     }
 
     .voltar {
