--- a/menu-manutencoes.html
+++ b/menu-manutencoes.html
@@ -194,17 +194,17 @@
     </div>
 
     <div class="dashboard">
-      <a href="form-pecas.html" class="card">
+      <a href="Dashboardplanomanutencao.html" class="card">
         <i class="fa-solid fa-comments-dollar"></i>
         <p>Indicações Consutores</p>
       </a>
 
-      <a href="form-servicos.html" class="card">
+      <a href="#" class="card">
         <i class="fas fa-lightbulb"></i>
         <p>Oportunidades</p>
       </a>
 
-      <a href="form-servicos.html" class="card">
+      <a href="#" class="card">
         <i class="fas fa-clipboard-list"></i>
         <p>Planos Vigentes</p>
       </a>
@@ -345,3 +345,4 @@
 
 </body>
 </html>
+
